# CPP-Reflection

./: CMakeLists.txt
Examples/: AdvancedTestTypes.cpp  AdvancedTestTypes.h  CMakeLists.txt  ComprehensiveTest.cpp  GlobalFunctionsTest.cpp  GlobalFunctionsTest.h  TestReflection.h
Source/Common/Lib/: json11.cpp
Source/Parser/: CMakeLists.txt
Source/Runtime/: CMakeLists.txt
